--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,11 +1,24 @@
 .App {
   text-align: center;
+  
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
-/* .character {
-  border: 1px solid red;
-} */
+.character {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 200px;
+}
+
+.card {
+  margin: 25px;
+}
+
+img {
+  height: 300px;
+  margin-bottom: -125px;
+  border-radius: 20px;
+}
